Added Quick Troubleshooting

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card text-bg-primary">
-                        <a href="#">
+                        <a href="./guides/quick-troubleshooting.html">
                             <div class="card-body">
                                 <h5 class="card-title">Quick Troubleshooting Guides</h5>
                                 <p class="card-text">Simple troubleshooting guides to assist with simple issues.</p>
