--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/global.css">
+
+    <style>
+        /* @media (max-width: 992px) {
+            .card-override  {
+                max-height: 50px !important;
+            }
+        } */
+    </style>
 </head>
 <body class="bg-dark text-light">
     <div class="container">
