--- a/guides/guides-temp.html
+++ b/guides/guides-temp.html
@@ -7,10 +7,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/guides.css">
 </head>
 <body class="bg-dark text-light">
     <div class="container">
-        
+        <div class="heading-container">
+            <h1>Placeholder header text</h1>
+            <p class="lead">Placeholder description.</p>
+            <hr>
+        </div>
+
+
+        <div class="body-container">
+
+        </div>
     </div>
 
     <footer>
