--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="col-lg-4">
                     <div class="card text-bg-primary">
-                        <a href="#">
+                        <a href="./guides/imaging-a-device.html">
                             <div class="card-body">
                                 <h5 class="card-title">Image a computer</h5>
                                 <p class="card-text">How to image a computer. The process, setup, etc.</p>
