--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">BIOS Configuration</h5>
                                 <p class="card-text">Which BIOS settings to change and what they do.</p>
+                                <p class="card-text">(Under construction)</p>
                             </div>
                         </a>
                     </div>
