Even more CSS editing.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 
                 <div class="col-lg-4">
                     <div class="card text-bg-primary">
-                        <a href="#">
+                        <a href="/guides/handling-tickets.html">
                             <div class="card-body">
-                                <h5 class="card-title">BIOS Configuration</h5>
-                                <p class="card-text">Which BIOS settings to change and what they do.</p>
-                                <p class="card-text">(Under construction)</p>
+                                <h5 class="card-title">How to Handle Tickets</h5>
+                                <p class="card-text">Understand how to handle tickets in ServiceNow (SNOW)</p>
                             </div>
                         </a>
                     </div>
