--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-3">
+
+
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="card text-bg-primary">
+                        <a href="/guides/pre-deployment-checklist.html">
+                            <div class="card-body">
+                                <h5 class="card-title">Program Installation Checklist</h5>
+                                <p class="card-text">Install these programs after imaging a computer.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-3">
+                    
+                </div>
+            </div>
         </section>
     </div>
 
