--- a/guides/handling-tickets.html
+++ b/guides/handling-tickets.html
@@ -19,8 +19,8 @@
 <body class="bg-dark text-light">
     <div class="container">
         <div class="heading-container">
-            <h1>Placeholder header text</h1>
-            <p class="lead">Placeholder description.</p>
+            <h1>Handling Tickets</h1>
+            <p class="lead">How to log into ServiceNow (SNOW) and handle tickets.</p>
             <hr>
         </div>
 
