--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="col-lg-4">
                     <div class="card text-bg-primary">
-                        <a href="/guides/handling-tickets.html">
+                        <a href="./guides/handling-tickets.html">
                             <div class="card-body">
                                 <h5 class="card-title">How to Handle Tickets</h5>
                                 <p class="card-text">Understand how to handle tickets in ServiceNow (SNOW)</p>
@@ -72,7 +72,7 @@
 
                 <div class="col-lg-6">
                     <div class="card text-bg-primary">
-                        <a href="/guides/pre-deployment-checklist.html">
+                        <a href="./guides/pre-deployment-checklist.html">
                             <div class="card-body">
                                 <h5 class="card-title">Program Installation Checklist</h5>
                                 <p class="card-text">Install these programs after imaging a computer.</p>
