--- a/guides/handling-tickets.html
+++ b/guides/handling-tickets.html
@@ -92,7 +92,7 @@
             </p>
 
             <p>
-                The <p>My Cases</p> section is the section you will be workin in most of the time. You will notice that the <b>State</b> column will either be labelled as <b>On Hold, Open,</b> or <b>Solution Proposed</b>.
+                The <b>My Cases</b> section is the section you will be workin in most of the time. You will notice that the <b>State</b> column will either be labelled as <b>On Hold, Open,</b> or <b>Solution Proposed</b>.
             </p>
 
             <ul>
