--- a/guides/program-installation-checklist.html
+++ b/guides/program-installation-checklist.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="../styles/guides.css">
 
     <style>
-        .tab {
-            text-indent: 500px;
+        @media (max-width: 1280px) {
+            h2 { font-size: 175%; }
+            h3 { font-size: 100%; }
+            li { font-size: 75%; }
         }
     </style>
 </head>
@@ -45,7 +47,7 @@
                     </ul>
                 </div>
 
-                <div class="col-lg-4" id="tabs">
+                <div class="col-lg-4">
                     <h3>Instructional Machines: Basic</h3>
                     <ul>
                         <li>MS Office 365 (including MS Teams & OneDrive) MANAGED</li>
@@ -94,25 +96,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
-
-    <script>
-        var tabs = document.getElementById('tabs');
-        var ps = tabs.getElementsByTagName('p');
-        var p;
-        var spans;
-        var span;
-        var w;
-        var wTab = 25;
-        for (var i = 0; i < ps.length; i++) { 
-            p = ps.item(i);
-            spans = p.getElementsByTagName('span');
-            for (var j = 0; j < spans.length - 1; j++) { 
-                span = spans.item(j);
-                w = span.offsetWidth;
-                w = Math.ceil(w / wTab) * wTab - w;
-                span.style.paddingRight = w + 'px';
-            }
-        }
-    </script>
 </body>
 </html>
