Added a disclaimer on the homepage

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
                 </div>
             </div>
         </section>
+
+        <section class="text-center" id="disclaimer">
+            <hr>
+            <h1>Disclaimer</h1>
+            <p class="lead">
+                This webpage will only be available if you are on Ethernet within Murphy Hall. This webpage will not work elsewhere.
+            </p>
+        </section>
     </div>
 
     <!-- Bootstrap JS -->
